# src/main/java/edu/uniquindio/api_rest/controllers/AuthenticationController.java
@@ -1,0 +1,37 @@
+package edu.uniquindio.api_rest.controllers;
+
+import edu.uniquindio.api_rest.models.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+
+import org.springframework.web.bind.annotation.RestController;
+
+import edu.uniquindio.api_rest.services.AuthenticationService;
+
+
+
+@RestController
+
+public class AuthenticationController {
+      private final AuthenticationService authenticationService;
+
+    public AuthenticationController(AuthenticationService authenticationService) {
+        this.authenticationService = authenticationService;
+    }
+
+    //Login
+    @PostMapping("/login")
+    public ResponseEntity<?> authenticate(@RequestBody Login login) {
+        return authenticationService.authenticate(login);
+    }
+
+    //Recuperación contraseña 
+    @PostMapping("/recuperacion-clave")
+    public ResponseEntity<?> recuperarClave(@RequestBody RecuperacionClave recuperacionClave) {
+        return authenticationService.recuperacionClave(recuperacionClave);
+    }
+
+
+
+}
